# invenio-files-rest

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.install-mysql-5.7.sh  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-i18n-tests.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  exampleapp.rst  index.rst  installation.rst  new-storage-backend.rst  overview.rst  usage.rst
docs/api/: invenio_files_rest.config.rst  invenio_files_rest.ext.rst  invenio_files_rest.location.rst  invenio_files_rest.models.rst  invenio_files_rest.permissions.rst  invenio_files_rest.rst  invenio_files_rest.serializer.rst  invenio_files_rest.storage.rst  invenio_files_rest.version.rst  invenio_files_rest.views.rst  modules.rst
examples/: app-setup.sh  app-teardown.sh  app.py  requirements.txt
invenio_files_rest/: __init__.py  admin.py  app.py  cli.py  config.py  errors.py  ext.py  formparser.py  helpers.py  limiters.py  links.py  location.py  models.py  permissions.py  proxies.py  serializer.py  signals.py  storage.py  tasks.py  uploader.py  utils.py  version.py  views.py  wrappers.py  wsgi.py
invenio_files_rest/alembic/: 08e4a71525b6_change_datetime_types.py  0999e27defd5_add_backend_name.py  2e97565eba72_create_files_rest_tables.py  52ce868f33c3_create_files_rest_branch.py  85899484645f_create_secondary_check_for_files.py  8ae99b034410_create_files_objecttags_table.py  8ae99b034410_revision_message.py  a29271fd78f8_create_files_object_partial_unique_index.py  b424b7c75aab_create_objectversiontag_model.py  e172c837b036_add_indexes.py  f741aa746a7d_alter_files_files_last_check_column_to_.py
invenio_files_rest/contrib/: __init__.py  s3.py
invenio_files_rest/serializers/: __init__.py  base.py  json.py  marshmallow.py  response.py
invenio_files_rest/serializers/schemas/: __init__.py  json.py
invenio_files_rest/storage/: __init__.py  base.py  factory.py  legacy.py  pyfs.py  router.py
invenio_files_rest/templates/invenio_files_rest/: index.html
invenio_files_rest/translations/: messages.pot
invenio_files_rest/translations/ar/LC_MESSAGES/: messages.po
invenio_files_rest/translations/bg/LC_MESSAGES/: messages.po
invenio_files_rest/translations/ca/LC_MESSAGES/: messages.po
invenio_files_rest/translations/cs/LC_MESSAGES/: messages.po
invenio_files_rest/translations/da/LC_MESSAGES/: messages.po
invenio_files_rest/translations/de/LC_MESSAGES/: messages.po
invenio_files_rest/translations/el/LC_MESSAGES/: messages.po
invenio_files_rest/translations/es/LC_MESSAGES/: messages.po
invenio_files_rest/translations/et/LC_MESSAGES/: messages.po
invenio_files_rest/translations/fa/LC_MESSAGES/: messages.po
invenio_files_rest/translations/fi/LC_MESSAGES/: messages.po
invenio_files_rest/translations/fr/LC_MESSAGES/: messages.po
invenio_files_rest/translations/hr/LC_MESSAGES/: messages.po
invenio_files_rest/translations/hu/LC_MESSAGES/: messages.po
invenio_files_rest/translations/it/LC_MESSAGES/: messages.po
invenio_files_rest/translations/ja/LC_MESSAGES/: messages.po
invenio_files_rest/translations/ka/LC_MESSAGES/: messages.po
invenio_files_rest/translations/ko/LC_MESSAGES/: messages.po
invenio_files_rest/translations/lt/LC_MESSAGES/: messages.po
invenio_files_rest/translations/no/LC_MESSAGES/: messages.po
invenio_files_rest/translations/pl/LC_MESSAGES/: messages.po
invenio_files_rest/translations/pt/LC_MESSAGES/: messages.po
invenio_files_rest/translations/ro/LC_MESSAGES/: messages.po
invenio_files_rest/translations/ru/LC_MESSAGES/: messages.po
invenio_files_rest/translations/sk/LC_MESSAGES/: messages.po
invenio_files_rest/translations/sv/LC_MESSAGES/: messages.po
invenio_files_rest/translations/tr/LC_MESSAGES/: messages.po
invenio_files_rest/translations/uk/LC_MESSAGES/: messages.po
invenio_files_rest/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_files_rest/translations/zh_CN/LC_MESSAGES/: messages.po
tests/: conftest.py  legacy_storage_interface.py  test_admin.py  test_cli.py  test_examples_app.py  test_helpers.py  test_invenio_files_rest.py  test_legacy_storage.py  test_limiters.py  test_models.py  test_models_multipart.py  test_request.py  test_serializer.py  test_signals.py  test_storage.py  test_storage_router.py  test_storage_s3.py  test_tasks.py  test_views.py  test_views_bucket.py  test_views_location.py  test_views_multipart.py  test_views_object.py  test_views_objectversion.py  test_views_records_ui.py  test_views_tag.py  testutils.py
tests/fixtures/source/: root.py
(+2 files in other folders)
